[package]
name = "read-write-api"
version = "0.14.1"
authors = ["Andrew Sonin <sonin.cel@yandex.ru>"]
description = "Provides an interface to unify single-threaded code and RwLocks-based code."
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]
license = "MIT"
repository = "https://github.com/andrewsonin/read_write_api"
readme = "README.md"
rust-version = "1.65"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"